Revision history for Perl extension POE::Component::SSLify.

{{$NEXT}}

1.008	2011-05-04 21:55:27 UTC

	Bazerka@irc noticed that POE wasn't even listed as a runtime prereq, d0h!

1.007	2011-05-04 21:36:32 UTC

	Revert the ENGINE load logic added in 1.004 because it was causing coredumps on netbsd ( thanks BINGOS! )
	Add the constant LOAD_SSL_ENGINES sub if you need to load the ssl engines
	Tweak the renegotiate tests to be more tolerant of failures, thanks RCAPUTO - RT#66741

1.006	2011-04-22 00:21:51 UTC

	Fix a heinous bug where openssl will randomly+reliably close a connection ( thanks MIRE )
	Tweak the hook tests so they test the case where no data is sent over the connection
	Tweak the connfail tests so they work better

1.005	2011-03-10 07:55:30 UTC

	Fix the connfail tests due to an incorrect assumption regards socket close value, thanks CPANTesters!

1.004	2011-03-08 23:39:03 UTC

	We now load certificate files via CTX_use_certificate_chain_file(), thanks Zephaniah E. Loss-Cutler-Hull <warp-spam_perl@aehallh.com>
		OpenSSL docs suggest it - http://www.openssl.org/docs/ssl/SSL_CTX_use_certificate.html#NOTES
		PLEASE yell at me if you need the old functionality - the docs suggest this is the "better" way to do it...
	Add the ability to pass a subref to call on connection/negotiation success, thanks Zephaniah E. Loss-Cutler-Hull <warp-spam_perl@aehallh.com>
		NOTE: This will not work if you do renegotiation or any other zany SSL stuff!
	Add the SSLify_GetStatus function to get the status of the connection
	After staring at the Net::SSLeay/OpenSSL docs for a while I realized we were missing support for sslv23 version, added!
	After some investigation, we now load all default ENGINEs for OpenSSL on startup, as it might provide a performance boost

1.003	2011-02-28 15:52:24 UTC

	Add $IGNORE_SSL_ERRORS to ignore certain SSL errors, thanks MNUNBERG - RT#66130
	Remove prereq on vars.pm as it's obsolete

1.002	2011-02-20 04:23:48 UTC
